--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,17 +1,242 @@
-/*
-Copyright (c) 2009, Yahoo! Inc. All rights reserved.
-Code licensed under the BSD License:
-http://developer.yahoo.net/yui/license.txt
-version: 3.0.0
-build: 1549
-*/
-html{color:#000;background:#FFF;}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0;}table{border-collapse:collapse;border-spacing:0;}fieldset,img{border:0;}address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal;}li{list-style:none;}caption,th{text-align:left;}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal;}q:before,q:after{content:'';}abbr,acronym{border:0;font-variant:normal;}sup{vertical-align:text-top;}sub{vertical-align:text-bottom;}input,textarea,select{font-family:inherit;font-size:inherit;font-weight:inherit;}input,textarea,select{*font-size:100%;}legend{color:#000;}
+/* RESET */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, font, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	outline: 0;
+	font-weight: inherit;
+	font-style: inherit;
+	font-size: 100%;
+	font-family: inherit;
+	vertical-align: baseline;
+}
+/* remember to define focus styles! */
+:focus {
+	outline: 0;
+}
+body {
+	line-height: 1;
+	color: black;
+	background: white;
+}
+ol, ul {
+	list-style: none;
+}
+/* tables still need 'cellspacing="0"' in the markup */
+table {
+	border-collapse: separate;
+	border-spacing: 0;
+}
+caption, th, td {
+	text-align: left;
+	font-weight: normal;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: "";
+}
+blockquote, q {
+	quotes: "" "";
+}
 
-/*
-Copyright (c) 2009, Yahoo! Inc. All rights reserved.
-Code licensed under the BSD License:
-http://developer.yahoo.net/yui/license.txt
-version: 3.0.0
-build: 1549
-*/
-h1{font-size:138.5%;}h2{font-size:123.1%;}h3{font-size:108%;}h1,h2,h3{margin:1em 0;}h1,h2,h3,h4,h5,h6,strong{font-weight:bold;}abbr,acronym{border-bottom:1px dotted #000;cursor:help;}em{font-style:italic;}blockquote,ul,ol,dl{margin:1em;}ol,ul,dl{margin-left:2em;}ol li{list-style:decimal outside;}ul li{list-style:disc outside;}dl dd{margin-left:1em;}th,td{border:1px solid #000;padding:.5em;}th{font-weight:bold;text-align:center;}caption{margin-bottom:.5em;text-align:center;}p,fieldset,table,pre{margin-bottom:1em;}input[type=text],input[type=password],textarea{width:12.25em;*width:11.9em;}
+/* THEME */
+body {
+	font: 15px/22px Arial, Times, 'Times New Roman', serif;
+	color: #000;
+	background: #fff;
+}
+
+/** Elements **/
+a {
+	color: #0C386E;
+	text-decoration: none;
+}
+a:hover { color: #00AAD8 }
+h1, h2, h3, h4, h5, h6 {
+	font-family: Arial, Verdana, sans-serif;
+	font-weight: bold;
+}
+h1, h2 { font-size: 20px; }
+h3 { font-size: 18px; }
+h4 { font-size: 17px; }
+h5 { font-size: 16px; }
+h6 { font-size: 15px; }
+ul { list-style: square; }
+ol { list-style: decimal; }
+.generic-list {
+	font-size: 12px;
+	color: #333;
+	list-style: none;
+	margin-left: 13px;
+}
+blockquote {
+	padding: 20px 20px 0 20px;
+	margin: 5px 20px 20px;
+	font-family: Arial, Verdana, sans-serif;
+	font-size: 14px;
+	color: #333;
+	background: #eee;
+	border: 1px solid #ddd;
+}
+blockquote blockquote {
+	margin: 0 0 20px 0;
+	background: #f7f7f7;
+	border: 1px solid #ccc;
+}
+code {
+	padding: 2px 3px;
+	font: normal normal normal 12px/22px Arial, Verdana, sans-serif;
+	color: #444;
+	background: #eee;
+}
+pre {
+	overflow: auto;
+	padding: 20px;
+	font: normal normal normal 12px/22px Arial, Verdana, sans-serif;
+	color: #444;
+	background: #eee;
+	border: 1px solid #ddd;
+}
+pre code { padding: 0; }
+table {
+	width: 100%;
+	background: #fff;
+	border-left: 1px solid #ddd;
+	border-bottom: 1px solid #ddd;
+}
+caption {
+	font: italic normal normal 12px/22px Verdana, Geneva, Tahoma, sans-serif;
+	text-align: right;
+	color: #666;
+}
+tr {
+	margin: 1px;
+	border-top: 1px solid #ddd;
+}
+td {
+	padding: 3px;
+	font: normal normal normal 13px/22px Arial, Verdana, sans-serif;
+	border-right: 1px solid #ddd;
+}
+tr.alt td, tr.even td { background: #f7f7f7; }
+th {
+	padding: 3px;
+	font-weight: normal;
+	color: #444;
+	background: #eee;
+	border-right: 1px solid #ddd;
+}
+p { 
+	font-family: Arial, sans-serif; 
+	color: #333; 
+	padding-bottom: 15px; 
+	font-size: 12px; 
+	
+}
+acronym {
+	font-size: 13px;
+	border: none;
+}
+
+
+/** Content Containers **/
+
+#content-container {
+	width: 960px;
+	margin: 20px auto;
+	background: #ffffff;
+	position:relative;
+}
+#major-col {
+	width: 622px;
+	margin-left:7px;
+}
+
+#minor-col {
+    right:0px;
+    top:0px;
+    position:absolute;
+    width: 300px;
+}
+
+/** Header **/
+#header-container {
+	width: 100%;
+	height: 138px;
+	background: transparent url(http://static.repowerathome.com/images/theme/header-bg.png) repeat-x left top;
+	min-width: 960px;
+}
+#header {
+	margin: 0 auto;
+	width: 960px;
+}
+#header .site-logo {
+	float: left;
+	display: block;
+	height: 138px;
+	width: 420px;
+	background: transparent url(http://static.repowerathome.com/images/theme/header-logo.png) no-repeat left top;
+}
+
+
+/** Footer **/
+#footer-container {
+	clear: both;
+	width: 100%;
+	background: url(http://static.repowerathome.com/images/theme/footer-bg.png) top left repeat-x;
+	height: 223px;
+	border-top: solid 1px #EEE;
+	min-width: 960px;
+}
+
+#subsidiary {
+	overflow: hidden;
+	width: 940px;
+	padding: 30px 20px 10px 20px;
+	background: #fff;
+	border-top: 1px solid #ccc;
+	border-bottom: 1px solid #ccc;
+}
+
+#footer {
+	clear: both;
+	overflow: hidden;
+	color: #fff;
+	margin: 0 auto;
+	padding: 20px 0 0 0;
+	font-size: 11px;
+	color: #666666;
+	width: 970px;
+}
+#footer a {
+	font-style: italic;
+	color: #579C14
+}
+
+#footer a:hover {
+	color: #88ca48;
+}
+
+#footer .copy { margin-top: 32px; }
+#footer .copyright {
+	display: inline;
+	float: left;
+	margin-right: 9px;
+}
+#footer .footer-links { text-align: right; }
+#footer .learn {
+	margin-top: 18px;
+	text-align: center;
+}
+.learn p {
+	font-size: 11px;
+	color: #000;
+}
+#footer .footer-links a, #footer .learn a { font-style: normal; }
