--- a/templates/rah/base.html
+++ b/templates/rah/base.html
@@ -5,7 +5,49 @@
         <link rel="stylesheet" href="http://static.repowerathome.com/css/style.css" type="text/css" media="screen" charset="utf-8"/>
     </head>
     <body>
-        {% block content %}{% endblock %}
+        <div id="header-container">
+            <div id="header">
+                <a href="/" alt="Repower America" class="site-logo"></a>
+            </div>
+        </div>
+        <div id="content-container">
+            <div id="major-col">
+                <h1 class="page-header">National Security</h1>
+                <p>As long as we continue to send hundreds of billions of dollars for foreign oil to the most dangerous and unstable regions of the world year after year, our national security will continue to be at risk.</p>
+                <p>Transitioning America to a clean energy economy that relies on renewable domestic sources of energy will reduce our dangerous over reliance on foreign oil and our exposure to energy-driven conflicts overseas. By repowering America with renewable energy, we can regain control of our own national destiny and restore America’s moral and economic leadership in the world.</p>
+                {% block content %}{% endblock %}
+            </div>
+            <div id="minor-col">
+                {% block minorcol %}
+                    
+                {% endblock %}
+            </div>
+        </div>
+        <div id="footer-container">
+            <div id="footer">
+                <div class="search-container">
+                    <div class="copy">
+                        <div class="copyright">
+                            Copyright © The Alliance for Climate Protection 2009. All Rights Reserved.
+                        </div>
+                        <div class="footer-links">
+                            <a href="http://www.climateprotect.org/">The Alliance for Climate Protection</a> | 
+                            <a href="http://www.climateprotectionactionfund.org/">Climate Protection Action Fund</a> | 
+                            <a href="http://acp.repoweramerica.org/page/s/recontact">Contact Us</a> | 
+                            <a href="http://www.repoweramerica.org/terms-of-use">Terms of Use</a> | 
+                            <a href="/privacy-policy">Privacy Policy</a>
+                        </div>
+                        <div class="learn">
+                            The Repower America Web site is shared by the Alliance for Climate Protection and the 
+                            Climate Protection Action Fund.<br/>
+                            <a href="/about/learn-more-about-repower-america/">Learn more</a> about the distinction 
+                            between the efforts of these two organizations through Repower America.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
         <script type="text/javascript" src="http://static.repowerathome.com/js/jquery-1.3.2.min.js"></script>
 {% comment %}
         <script type="text/javascript">
