--- a/templates/rah/base.html
+++ b/templates/rah/base.html
@@ -2,6 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
     <head>
         <title>{% block title %}{% endblock %} | Repower@Home</title>
+        <meta name="google-site-verification" content="LKUJZqwKMnEGjg_dQNKL-2eLLK3yvftU0RKv7SuymGQ" />
+        <link rel="shortcut icon" href="http://static.repowerathome.com/images/theme/favico.ico"/>
         <link rel="stylesheet" href="http://static.repowerathome.com/css/style.css" type="text/css" media="screen" charset="utf-8"/>
     </head>
     <body>
