--- a/templates/splash/index.html
+++ b/templates/splash/index.html
@@ -2,6 +2,14 @@
 {% block title %}
     Welcome
 {% endblock %}
+{% block content %}
+    <h2>Saving energy starts @ home</h2>
+    <p>Repower@Home, a new project of The Alliance for Climate Protection, will help you unlock the energy saving potential in your home. Our homes consume nearly a quarter of all the energy used in United States. Burning away this energy takes a serious toll on our environment and our wallets. Luckily, there are many easy steps you can take to reduce energy waste. Repower@Home will show you how, making the process easy and fun. When you start saving energy, you’ll become a role model to members of your community. Together, all those small steps will add up to big rewards.</p>
+    <h2>It starts with us</h2>
+    <p>Launching this winter, Repower@Home’s online site will be a comprehensive resource for energy efficiency. You can research efficiency upgrades, receive personalized recommendations, and connect with qualified energy professionals in your neighborhood. Our online tracking tools will help you set goals, assess your progress, and share your achievements with members of the community. This online hub will also connect you with members offline through efficiency house parties and meet- ups.</p>
+    <h2>It starts today</h2>
+    <p>Sign-up now and we'll send you updates about the site launch, conservation tips, and more.</p>
+{% endblock %}
 {% block minorcol %}
   <h2>Stay in the loop</h2>
   <p>Sign up for our email list and you'll be the first to hear about Repower@Home news, private betas, and our big launch!</p>
