--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -4,7 +4,7 @@
   <h1>Create an account</h1>
 
   <form action="" method="post">
-      <div>{{ form.as_ul }}</div>
+      <div>{{ form.as_p }}</div>
       <input type="submit" value="Register"/>
       {% csrf_token %}
   </form>
