Added success message to email submit form and css for messaging in general

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -145,9 +145,18 @@ acronym {
 	border: none;
 }
 
+/* Messages */
+.info, .success, .warning, .error, .validation {
+    border: 2px solid;
+    margin: 10px 0px;
+    padding:10px;
+}
+.info    { color: #00529B; background-color: #BDE5F8; }
+.success { color: #4F8A10; background-color: #DFF2BF; }
+.warning { color: #9F6000; background-color: #FEEFB3; }
+.error   { color: #D8000C; background-color: #FFBABA; }
 
 /** Content Containers **/
-
 #content-container {
 	width: 960px;
 	margin: 20px auto;
