--- a/templates/splash/index.html
+++ b/templates/splash/index.html
@@ -11,12 +11,18 @@
     <p>Sign-up now and we'll send you updates about the site launch, conservation tips, and more.</p>
 {% endblock %}
 {% block minorcol %}
-  <h2>Stay in the loop</h2>
-  <p>Sign up for our email list and you'll be the first to hear about Repower@Home news, private betas, and our big launch!</p>
-  <form action="" method="post">
-      <div>{{ form.as_p }}
-      <input type="submit" value="Sign Up"/>
-      </div>
-      {% csrf_token %}
-  </form>
+    <h2>Stay in the loop</h2>
+    <p>Sign up for our email list and you'll be the first to hear about Repower@Home news, private betas, and our big launch!</p>
+    {% if success %}
+        <div class="success">
+            Thanks! We'll be in touch.
+        </div>
+    {% else %}
+    <form action="" method="post">
+        <div>{{ form.as_p }}
+        <input type="submit" value="Sign Up"/>
+        </div>
+        {% csrf_token %}
+    </form>
+    {% endif %}
 {% endblock %}
