--- a/static/css/style.css
+++ b/static/css/style.css
@@ -175,6 +175,14 @@ acronym {
     width: 300px;
 }
 
+/* Navigation */
+#nav {
+    width: 100%;
+    float:left;
+    font-size:20px;
+    font-weight:bold;
+}
+
 /* Breadcrumbs */
 #breadcrumbs {font-size:11px; margin-bottom:20px;}
 
