--- a/templates/rah/profile.html
+++ b/templates/rah/profile.html
@@ -1,5 +1,7 @@
 {% extends "rah/base.html" %}
 {% block content %}
-<h1>{{profile.user.get_full_name}} Profile Page</h1>
-<img src="{{profile.get_gravatar_url}}" alt="user gravatar" height="30" width="30" />
+  <h1>{{profile.user.get_full_name}}'s Profile Page</h1>
+  <img src="{{profile.get_gravatar_url}}" alt="user gravatar" />
 {% endblock %}
+
+{% block minorcol %}{% endblock %}
