--- a/templates/rah/profile.html
+++ b/templates/rah/profile.html
@@ -1,7 +1,9 @@
 {% extends "rah/base.html" %}
 {% block content %}
-  <h1>{{profile.user.get_full_name}}'s Profile Page</h1>
+  <h1>{{profile.user.get_full_name}} is located at {{profile.location.name}}, {{profile.location.state}}</h1>
+  
   <img src="{{profile.get_gravatar_url}}" alt="user gravatar" />
+  <h3><a href="/inquiry/">Edit My Profile</a></h3>
 {% endblock %}
 
 {% block minorcol %}{% endblock %}
