--- a/templates/rah/profile.html
+++ b/templates/rah/profile.html
@@ -1,6 +1,6 @@
 {% extends "rah/base.html" %}
 {% block content %}
-  <h1>{{profile.user.get_full_name}} is located at {{profile.location.name}}, {{profile.location.state}}</h1>
+  <h1>{{profile.user.get_full_name}} is located at {{profile.location.name}}, {{profile.location.state}} living in a {{profile.get_building_type_display}}</h1>
   
   <img src="{{profile.get_gravatar_url}}" alt="user gravatar" />
   <h3><a href="/inquiry/">Edit My Profile</a></h3>
