Allowing users to set status on action status page Logged in users can view their status on action detail page and action category pages (next to actions) converting camelCase function names to_snake

--- a/templates/rah/action_browse.html
+++ b/templates/rah/action_browse.html
@@ -8,7 +8,7 @@
 <p>Select a category of action</p>
 <ul>
     {% for cat in cats %}
-    <li><a href="{% url rah.views.actionCat cat.slug %}">{{cat}}</a></li>
+    <li><a href="{% url rah.views.action_cat cat.slug %}">{{cat}}</a></li>
     {% endfor %}
 </ul>
 {% endblock %}
