--- a/templates/rah/base.html
+++ b/templates/rah/base.html
@@ -19,7 +19,7 @@
                 </div>
                 <div id="nav">
                     <a href="{% url rah.views.index %}">Home</a> | 
-                    <a href="{% url rah.views.actionBrowse %}">Actions</a>
+                    <a href="{% url rah.views.action_browse %}">Actions</a>
                 </div>
             </div>
         </div>
