--- a/static/css/style.css
+++ b/static/css/style.css
@@ -190,7 +190,7 @@ acronym {
 #header-container {
 	width: 100%;
 	height: 138px;
-	background: transparent url(http://static.repowerathome.com/images/theme/header-bg.png) repeat-x left top;
+	background: transparent url(../images/theme/header-bg.png) repeat-x left top;
 	min-width: 960px;
 }
 #header {
@@ -205,7 +205,7 @@ acronym {
 	width: 500px;
 	margin-top:30px;
 	margin-left:8px;
-	background: transparent url(http://static.repowerathome.com/images/theme/header-ratlogo.png) no-repeat left top;
+	background: transparent url(../images/theme/header-ratlogo.png) no-repeat left top;
 }
 
 #header-links {
@@ -218,7 +218,7 @@ acronym {
 #footer-container {
 	clear: both;
 	width: 100%;
-	background: url(http://static.repowerathome.com/images/theme/footer-bg.png) top left repeat-x;
+	background: url(../images/theme/footer-bg.png) top left repeat-x;
 	height: 223px;
 	border-top: solid 1px #EEE;
 	min-width: 960px;
