--- a/templates/rah/base.html
+++ b/templates/rah/base.html
@@ -3,8 +3,8 @@
     <head>
         <title>{% block title %}{% endblock %} | Repower@Home</title>
         <meta name="google-site-verification" content="LKUJZqwKMnEGjg_dQNKL-2eLLK3yvftU0RKv7SuymGQ" />
-        <link rel="shortcut icon" href="http://static.repowerathome.com/images/theme/favico.ico"/>
-        <link rel="stylesheet" href="http://static.repowerathome.com/css/style.css" type="text/css" media="screen" charset="utf-8"/>
+        <link rel="shortcut icon" href="{{ MEDIA_URL }}images/theme/favico.ico"/>
+        <link rel="stylesheet" href="{{ MEDIA_URL }}css/style.css" type="text/css" media="screen" charset="utf-8"/>
     </head>
     <body>
         <div id="header-container">
@@ -56,7 +56,7 @@
             </div>
         </div>
         
-        <script type="text/javascript" src="http://static.repowerathome.com/js/jquery-1.3.2.min.js"></script>
+        <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery-1.3.2.min.js"></script>
 {% comment %}
         <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
