--- a/templates/rah/action_detail.html
+++ b/templates/rah/action_detail.html
@@ -7,18 +7,18 @@
     {{action.name}}
 </div>
 <h1>{{action.name}}</h1>
-Your Status: 
-{% if user.is_authenticated and status %}
-    {{status.status}}
-{% else %}
-    Not Started
-{% endif %}
-<form action="" method="post" accept-charset="utf-8">
-    
-    {{form.as_p}}
-    <p><input type="submit" value="Update Status"></p>
-    {% csrf_token %}
-</form>
+
+{% for task in tasks %}
+    <form action="" method="post" accept-charset="utf-8">
+        {% ifequal task.completed None %}
+            <input type="checkbox" name="">{{ task.task.name }}</input>
+        {% else %}
+            <input type="checkbox" name="" checked>{{ task.task.name }}</input>
+        {% endifequal %}
+        <span><input type="submit" value="Update"></span>
+        {% csrf_token %}
+    </form>
+{% endfor %}
 <br/>
 {{action.content}}
 {% endblock %}
