--- a/templates/rah/home_logged_in.html
+++ b/templates/rah/home_logged_in.html
@@ -1,7 +1,33 @@
 {% extends "rah/base.html" %}
 {% block content %}
-<h1>Logged IN Homepage</h1>
-<p>
-    <a href="/logout">Logout Here</a>
-</p>
+<h1>Hello {{user.username}}!</h1>
+<p>Welcome to Repower@Home.</p>
+<hr/>
+<h2>Actions we recommend for you</h2>
+<ul>
+    {% for action in action_recs %}
+        <li><a href="{% url rah.views.action_detail action.category.slug,action.slug %}">{{action.name}}</a></li>
+    {% endfor %}
+</ul>
+<hr/>
+<h2>Actions you're working on</h2>
+    <ul>
+    {% for action in in_progress %}
+        <li><a href="{% url rah.views.action_detail action.action_task.action.category.slug,action.action_task.action.slug %}">{{action.action_task.action.name}}</a></li>
+    {% endfor %}
+    </ul>
+<hr/>
+<h2>Total Points: {{total_points}}</h2>
+<ul>
+    {% for point in points %}
+        <li>
+            {{point.points}} points: 
+            {% if point.task %} 
+                {{point.task.name}} 
+            {% else %} 
+                {{point.get_reason_display}}
+            {% endif %}
+        </li>
+    {% endfor %}
+</ul>
 {% endblock %}
