Files I forgot to commit before the last push. Not up for figuring out how to edit past commits.

--- a/templates/rah/base.html
+++ b/templates/rah/base.html
@@ -18,7 +18,7 @@
                     {% endif %}
                 </div>
                 <div id="nav">
-                    <a href="{% url rah.views.index %}">Home</a> | 
+                    <a href="{% url rah.views.index %}">Home</a>&nbsp;
                     <a href="{% url rah.views.action_browse %}">Actions</a>
                 </div>
             </div>
