--- a/templates/rah/action_detail.html
+++ b/templates/rah/action_detail.html
@@ -7,17 +7,16 @@
     {{action.name}}
 </div>
 <h1>{{action.name}}</h1>
-{% for task in tasks %}
+{% for task in action_tasks %}
+    <h2>{{ task.sequence }}) {{ task.name }}</h2>
+    {% if user.is_authenticated %}
     <form action="" method="post" accept-charset="utf-8">
-        {% ifequal task.completed None %}
-            <input type="checkbox" name="">{{ task.task.name }}</input>
-        {% else %}
-            <input type="checkbox" name="" checked>{{ task.task.name }}</input>
-        {% endifequal %}
-        <span><input type="submit" value="Update"></span>
+        <input type="checkbox" name="task_completed" {% if task.completed %}checked="checked"{% endif %}>Completed</input>
+        <input type="hidden" name="task_id" value="{{task.id}}"/>
+        <span><input type="submit" value="Update"/></span>
         {% csrf_token %}
     </form>
+    {% endif %}
+    {{task.content|safe|linebreaks}}
 {% endfor %}
-<br/>
-{{action.content}}
 {% endblock %}
