--- a/templates/rah/profile.html
+++ b/templates/rah/profile.html
@@ -1,12 +1,15 @@
 {% extends "rah/base.html" %}
 {% block content %}
-<h1>{{profile.user.username}}'s Profile (<a href="{% url rah.views.profile_edit profile.user %}">Edit</a>)</h1>
+<h1>{{profile.user.username}}'s Profile
+{% ifequal user.id profile.user.id  %}
+(<a href="{% url rah.views.profile_edit profile.user %}">Edit your profile</a>)
+{% endifequal %}
+</h1>
 <ul>
     <li>Location: {{profile.location.name}}, {{profile.location.state}}</li>
     <li>Home Type: {{profile.get_building_type_display}}</li>
 </ul>
 <img src="{{profile.get_gravatar_url}}" alt="user gravatar" />
-
 <h2>Total Points: {{total_points}}</h2>
 <ul>
     {% for point in points %}
