Cleaning up list display on logged in homepage

--- a/templates/rah/home_logged_in.html
+++ b/templates/rah/home_logged_in.html
@@ -12,22 +12,30 @@
 <hr/>
 <h2>Actions you're working on</h2>
     <ul>
-    {% for action in in_progress %}
-        <li><a href="{% url rah.views.action_detail action.action_task.action.category.slug,action.action_task.action.slug %}">{{action.action_task.action.name}}</a></li>
-    {% endfor %}
+    {% if in_progress %}        
+        {% for action in in_progress %}
+            <li><a href="{% url rah.views.action_detail action.action_task.action.category.slug,action.action_task.action.slug %}">{{action.action_task.action.name}}</a></li>
+        {% endfor %}
+    {% else %}
+        <li>You're not working on anything!</li>
+    {% endif %}
     </ul>
 <hr/>
-<h2>Total Points: {{total_points}}</h2>
+<h2>Total Points: {% if total_points %} {{total_points}} {% else %} 0 {% endif %}</h2>
 <ul>
-    {% for point in points %}
-        <li>
-            {{point.points}} points: 
-            {% if point.task %} 
-                {{point.task.name}} 
-            {% else %} 
-                {{point.get_reason_display}}
-            {% endif %}
-        </li>
-    {% endfor %}
+    {% if points %}
+        {% for point in points %}
+            <li>
+                {{point.points}} points: 
+                {% if point.task %} 
+                    {{point.task.name}} 
+                {% else %} 
+                    {{point.get_reason_display}}
+                {% endif %}
+            </li>
+        {% endfor %}    
+    {% else %}
+        <li>You don't have any points. Do something!</li>
+    {% endif %}
 </ul>
 {% endblock %}
