fixed bug that wouldn't allow new users to edit their profiles.  Also made the zipcode and building type fields on the profile edit page optional and fixed the rendering of location on the profile page. [completed 41]

--- a/templates/rah/profile.html
+++ b/templates/rah/profile.html
@@ -6,7 +6,7 @@
 {% endifequal %}
 </h1>
 <ul>
-    <li>Location: {{profile.location.name}}, {{profile.location.state}}</li>
+    <li>Location: {{profile.location}}</li>
     <li>Home Type: {{profile.get_building_type_display}}</li>
 </ul>
 <img src="{{profile.get_gravatar_url}}" alt="user gravatar" />
