action to the profile edit view is not needed in the profile edit template; just post to isself

--- a/templates/rah/profile_edit.html
+++ b/templates/rah/profile_edit.html
@@ -2,7 +2,7 @@
 {% block content %}
     <h1>Edit your Profile</h1>
     <a href="http://en.gravatar.com/">Change your image on gravatar.com</a>
-    <form action="{% url rah.views.profile_edit user.username %}" method="post">
+    <form action="" method="post">
         <div>{{form.as_p}}</div>
         <input type="submit" value="Submit" />
         <input type="hidden" name="next" value="{{ next|escape }}" />
