--- a/templates/rah/base.html
+++ b/templates/rah/base.html
@@ -20,6 +20,7 @@
                 <div id="nav">
                     <a href="{% url rah.views.index %}">Home</a>&nbsp;
                     <a href="{% url rah.views.action_browse %}">Actions</a>
+                    <a href="">About us</a>
                 </div>
             </div>
         </div>
@@ -57,7 +58,6 @@
         </div>
         
         <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery-1.3.2.min.js"></script>
-{% comment %}
         <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -65,6 +65,5 @@
         <script type="text/javascript">
             try { var pageTracker = _gat._getTracker("UA-11623269-1"); pageTracker._trackPageview(); } catch(err) {}
         </script>
-{% endcomment %}
     </body>
 </html>
