--- a/templates/rah/home_logged_in.html
+++ b/templates/rah/home_logged_in.html
@@ -1,6 +1,6 @@
 {% extends "rah/base.html" %}
 {% block content %}
-<h1>Hello {{user.username}}!</h1>
+<h1>Hello {{user.get_name}}!</h1>
 <p>Welcome to Repower@Home.</p>
 <hr/>
 <h2>Actions we recommend for you</h2>
