--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -5,7 +5,7 @@
     {% endif %}
 
     <form action="" method="post">
-        {{form.as_p}}
+        <div>{{form.as_p}}</div>
         <input type="submit" value="Login" />
         {% comment %}
             FIXME: find out why the next parameter isn't being used
