--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -1,2 +1,1 @@
-Use this link to reset your password:<br/>
-{{protocol}}://{{domain}}/reset/{{uid}}-{{token}}/
+Use this link to reset your Repower@Home password: {{protocol}}://{{domain}}/reset/{{uid}}-{{token}}/
