--- a/templates/rah/base.html
+++ b/templates/rah/base.html
@@ -57,8 +57,9 @@
                 </div>
             </div>
         </div>
-        
+        <script type="text/javascript" charset="utf-8">{% block javascript %}{% endblock %}</script>
         <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery-1.3.2.min.js"></script>
+        <script type="text/javascript" src="{{ MEDIA_URL }}js/rah.js"></script>
         <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
