Shortening up rah_name. adding rah.js

--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -11,4 +11,4 @@
       {% csrf_token %}
   </form>
 {% endblock %}
-{% block javascript %} var rah_name = "register"; {% endblock %}
+{% block js %}page_register{% endblock %}
