--- a/templates/rah/base.html
+++ b/templates/rah/base.html
@@ -57,7 +57,7 @@
                 </div>
             </div>
         </div>
-        <script type="text/javascript" charset="utf-8">{% block javascript %}{% endblock %}</script>
+        <script type="text/javascript" charset="utf-8"> var rah_name = "{% block js %}{% endblock %}";</script>
         <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery-1.3.2.min.js"></script>
         <script type="text/javascript" src="{{ MEDIA_URL }}js/rah.js"></script>
         <script type="text/javascript">
