--- a/static/css/style.css
+++ b/static/css/style.css
@@ -268,3 +268,25 @@ acronym {
 	color: #000;
 }
 #footer .footer-links a, #footer .learn a { font-style: normal; }
+
+.spacer { clear: both; }
+
+/* @group action_nugget */
+.action_nugget {
+	width: 275px;
+	height: 100px;
+	float: left;
+	margin-right: 23px;
+	border: 1px solid #000;
+	padding: 5px;
+	margin-bottom: 5px;
+	margin-top: 5px;
+}
+.action_nugget .title { color: #407cf3; }
+.action_nugget .total_points {
+	float: right;
+	font-weight: bold;
+	font-size: larger;
+}
+.action_nugget .completion { font-weight: bold; }
+/* @end */
