--- a/templates/rah/base.html
+++ b/templates/rah/base.html
@@ -4,7 +4,7 @@
         <title>{% block title %}{% endblock %} | Repower@Home</title>
         <meta name="google-site-verification" content="LKUJZqwKMnEGjg_dQNKL-2eLLK3yvftU0RKv7SuymGQ" />
         <link rel="shortcut icon" href="{{ MEDIA_URL }}images/theme/favico.ico"/>
-        <link rel="stylesheet" href="{{ MEDIA_URL }}css/style.css" type="text/css" media="screen" charset="utf-8"/>
+        <link rel="stylesheet" href="{{ MEDIA_URL }}css/style{%if not debug%}_min{%endif%}.css" type="text/css" media="screen" charset="utf-8"/>
     </head>
     <body>
         <div id="header-container">
@@ -58,8 +58,8 @@
             </div>
         </div>
         <script type="text/javascript" charset="utf-8"> var rah_name = "{% block js %}{% endblock %}";</script>
-        <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery-1.3.2.min.js"></script>
-        <script type="text/javascript" src="{{ MEDIA_URL }}js/rah.js"></script>
+        <script type="text/javascript" src="{{ MEDIA_URL }}js/js_libs{%if not debug%}_min{%endif%}.js"></script>        
+        <script type="text/javascript" src="{{ MEDIA_URL }}js/rah{%if not debug%}_min{%endif%}.js"></script>
         <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
