--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,11 +1,9 @@
 {% extends "rah/base.html" %}
-
 {% block content %}
   <h1>Create an account</h1>
-
-  <form action="" method="post">
+  <form action="" method="post" id="registration_form">
       <div>
-          {{ form.as_p }}
+          {{ form.as_p }}          
           <input type="submit" value="Register"/>
       </div>
       {% csrf_token %}
