updated the action detail pages so simply checking the box on the form will update the database; the user no longer needs to click the submit button. Waiting spinner will need to be added in the future. [completed: 54]

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -283,7 +283,7 @@ acronym {
 	margin-top: 5px;
 	position: relative;
 }
-.action_nugget .title { color: #407cf3; }
+.action_nugget .title { color: #407cf3; font-weight: bold; }
 .action_nugget .total_points {
 	float: right;
 	font-weight: bold;
