--- a/templates/rah/action_detail.html
+++ b/templates/rah/action_detail.html
@@ -2,8 +2,7 @@
 {% block content %}
 <div id="breadcrumbs">
     <a href="{% url rah.views.index %}">Home</a> &rsaquo;
-    <a href="{% url rah.views.action_browse %}">Actions</a> &rsaquo;
-    <a href="{% url rah.views.action_cat action.category.slug %}">{{action.category.name}}</a> &rsaquo;
+    <a href="{% url rah.views.action_show %}">Actions</a> &rsaquo;
     {{action.name}}
 </div>
 <h1>{{action.name}}</h1>
