--- a/templates/rah/base.html
+++ b/templates/rah/base.html
@@ -20,7 +20,7 @@
                 </div>
                 <div id="nav">
                     <a href="{% url rah.views.index %}">Home</a>&nbsp;
-                    <a href="{% url rah.views.action_browse %}">Actions</a>
+                    <a href="{% url rah.views.action_show %}">Actions</a>
                     <a href="">About us</a>
                 </div>
             </div>
