-Added minify task to capfile -Added some more jquery ui components (draggable, resizable) to make dialogs fully functional -3/4 done with #50 -Added jquery ui css and images for "smoothness" theme

--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,12 +1,23 @@
 {% extends "rah/base.html" %}
 {% block content %}
-  <h1>Create an account</h1>
-  <form action="" method="post" id="registration_form">
-      <div>
-          {{ form.as_p }}          
-          <input type="submit" value="Register"/>
-      </div>
-      {% csrf_token %}
-  </form>
+<h1>Create an account</h1>
+<form action="" method="post" id="registration_form">
+    <div>
+        {{ form.as_p }}          
+        <input type="submit" value="Register"/>
+    </div>
+    {% csrf_token %}
+</form>
+{#
+    TODO Add links to register and login
+#}
+<div id="dialog">
+    <form action="" method="post" id="profile_form">
+        <div>
+            {{ profileForm.as_p }}
+        </div>
+        {% csrf_token %}
+    </form>
+</div>
 {% endblock %}
 {% block js %}page_register{% endblock %}
