added action nuggets to the profile page, and refactored some code for code resuse between the index and profile views. [completed: 53]

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -271,6 +271,14 @@ acronym {
 
 .spacer { clear: both; }
 
+/* @group profile */
+.gravatar {
+	float: left;
+	width: 75px;
+	height: 75px;
+}
+/* @end */
+
 /* @group action_nugget */
 .action_nugget {
 	width: 275px;
