--- a/templates/rah/profile.html
+++ b/templates/rah/profile.html
@@ -1,28 +1,39 @@
 {% extends "rah/base.html" %}
 {% block content %}
-<h1>{{profile.user.get_name}}'s Profile
-{% ifequal user.id profile.user.id  %}
-    (<a href="{% url rah.views.profile_edit profile.user.id %}">Edit your profile</a>)
-{% endifequal %}
-</h1>
-<ul>
-    <li>Location: {{profile.location}}</li>
-    <li>Home Type: {{profile.get_building_type_display}}</li>
-</ul>
-<img src="{{ profile.get_gravatar_url }}" alt="user gravatar" />
-<h2>Total Points: {{total_points}}</h2>
-<ul>
-    {% for point in points %}
-        <li>
-            {{point.points}} points: 
-            {% if point.task %} 
-                {{point.task.name}} 
-            {% else %} 
-                {{point.get_reason_display}}
-            {% endif %}
-        </li>
-    {% endfor %}
-</ul>
+	<div class='profile_heading'>
+		<img class='gravatar' src="{{ profile.get_gravatar_url }}" alt="user gravatar" />
+		<h2>
+			{% ifequal user.id profile.user.id %}
+				<a href="{% url rah.views.profile_edit profile.user.id %}">{{ profile.user.get_name }}</a>
+			{% else %}
+				{{ profile.user.get_name }}
+			{% endifequal %}
+		</h2>
+		<h5>{{ profile.location|default_if_none:"" }}</h5>
+		<div class='spacer' />
+	</div>
+	<div class="actions_block">
+		<h2>In Progress Actions</h2>
+	    {% for action in in_progress %}
+			{% include 'rah/_action_nugget.html' %}
+	    {% endfor %}
+		<div class="spacer" />
+	</div>
+	<div class="actions_block">
+		<h2>Completed Actions</h2>
+	    {% for action in completed %}
+	        {% include 'rah/_action_nugget.html' %}
+	    {% endfor %}
+		<div class="spacer" />
+	</div>
+	<div class="actions_block">
+		<h2>Recommended Actions</h2>
+	    {% for action in recommended %}
+	        {% include 'rah/_action_nugget.html' %}
+	    {% endfor %}
+		<div class="spacer" />
+	</div>
 {% endblock %}
-
-{% block minorcol %}{% endblock %}
+{% block minorcol %}
+	{% include 'rah/_points.html' %}
+{% endblock %}
