Functionally [completes: #50] but needs some refinement, comments, and testing

--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -8,9 +8,7 @@
     </div>
     {% csrf_token %}
 </form>
-{#
-    TODO Add links to register and login
-#}
+{# TODO Add links to register and login #}
 <div id="dialog">
     <form action="" method="post" id="profile_form">
         <div>
