--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,8 +1,10 @@
 {% extends "rah/base.html" %}
 {% block content %}
-    <form action="" method="post">
-        {{form.as_p}}
-        <input type="submit" value="Reset password" />
-        {% csrf_token %}
-    </form>
+<form action="" method="post">
+    {{form.as_p}}
+    <input type="submit" value="Reset password" />
+    {% csrf_token %}
+</form>
+<a href="{% url django.contrib.auth.views.login %}">Log in</a> | 
+<a href="{% url rah.views.register %}">Register</a>
 {% endblock %}
